<resources>
    <string name="app_name">Not Bored</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="participants">Participants</string>
    <string name="participants_hint">Enter a number of participants…</string>
    <string name="start">Start</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="terms_conditions">Terms and conditions</string>
    <string name="ipsum_lorem">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus iaculis,
                               nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
                               laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
                               senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
                               semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum
                               aenean et eget pretium volutpat eu dictum dictumst.
                               <br /> <br />
                               Praesent gravida ridiculus cursus luctus maecenas in libero mi interdum, auctor
                               ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
                               mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla
                               ad, sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris
                               leo porta. Nibh interdum facilisis dapibus magnis phasellus tortor fusce nostra
                               quam, ante non elementum himenaeos id hac et hendrerit eros, dui at sollicitudin
                                   turpis viverra molestie cras quis.
                               <br />  <br />
                               Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu,
                               elementum dis ultricies eu tempus tincidunt lectus posuere, et ac interdum
                               commodo montes convallis curae facilisis. Vitae diam phasellus litora ad aenean
                               himenaeos, magnis malesuada nec metus faucibus, turpis mollis hac lacinia
                               lacus. Condimentum dis in sed vel molestie integer, gravida eget volutpat
                               interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis
                               egestas. Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi
                               integer non eget vivamus cursus hac, lacus rutrum ridiculus tempor litora nostradis.
                                <br />  <br />
                               Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque
                               feugiat mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra
                               donec aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
                               conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices
                               vestibulum cum leo semper fusce porta eu fermentum. Proin nisi suspendisse
                               class facilisi curabitur quisque, fusce vulputate semper a nulla velit, duis in orci
                               faucibus turpis. Risus metus magnis aliquam accumsan laoreet congue per,
                               tempus purus et odio senectus sodales vulputate, ligula malesuada dis habitass
                               nullam pellentesque.</string>
    <string name="hint_screen">Back to main page</string>
    <string name="activities">Activities</string>
    <string name="social">Social</string>
    <string name="back">Back</string>
    <string name="try_another">Try another</string>
    <string name="price">Price</string>
    <string name="shared_prefs">shared_prefs</string>
    <string name="no_parts">We do not have activities for that number of participants</string>
</resources>